# GP2040-CE-KANU

./: CMakeLists.txt
build2/: CMakeCache.txt  Makefile
build2/elf2uf2/: elf2uf2.ilk
build2/lib/: Makefile  cmake_install.cmake
build2/lib/ADS1219/: Makefile
build2/lib/AnimationStation/: Makefile
build2/lib/BitBang_I2C/: Makefile
build2/lib/CRC32/: Makefile
build2/lib/FlashPROM/: Makefile
build2/lib/NeoPico/: Makefile
build2/lib/OneBitDisplay/: Makefile
build2/lib/PlayerLEDs/: Makefile
build2/lib/SplitController/: Makefile  cmake_install.cmake
build2/lib/SplitController/i2c_slave/: Makefile  cmake_install.cmake
build2/lib/TinyUSB_Gamepad/: Makefile
build2/lib/WiiExtension/: Makefile
build2/lib/httpd/: Makefile
build2/lib/lwip-port/: Makefile
build2/lib/rndis/: Makefile
build2/pico-sdk/: Makefile
build2/pico-sdk/docs/: Makefile
build2/pico-sdk/src/: Makefile
build2/pico-sdk/src/common/: Makefile
build2/pico-sdk/src/rp2040/: Makefile
build2/pico-sdk/src/rp2_common/: Makefile
build2/pico-sdk/tools/: Makefile
build2/pioasm/: pioasm.ilk
configs/WaveshareZero/: BoardConfig.h
headers/: gamepad.h  storagemanager.h
headers/addons/: dualdirectional.h  split.h  tilt.h
headers/gamepad/: GamepadOptions.h
lib/: CMakeLists.txt
lib/SplitController/: CMakeLists.txt  SplitController.cpp  SplitController.h  SplitControllerMain.cpp
lib/SplitController/i2c_slave/: CMakeLists.txt
src/: gamepad.cpp  gp2040.cpp  storagemanager.cpp
src/addons/: split.cpp  tilt.cpp
src/configs/: webconfig.cpp
(+72 files in other folders)
